	* removed includes of the application manager as it is loaded with the community FE plugin
	* changed existing community applications to use the global instance of the application manager
	* !!! changed API of addLoop() in the template engine, now requires a marker name as second parameter for the looped variable

2008-09-19 Ingo Renner  <ingo@typo3.org>

	* added initial scaffolding for a criteria class to work with conditions for selecting records in an object oriented way
	* added initial code for the user profile search feature
	* added "compilation" of a where clause from search parameters in the search application, depending on TS configuration

2008-09-18 Ingo Renner  <ingo@typo3.org>

	* added a quick search input field widget
	* added basic scaffolding for the search application
	* added configuration for advanced search form
	* added rendering of advanced search form

2008-09-13 Ingo Renner  <ingo@typo3.org>

	* added initial support for anonymous visitors (anyone role)

2008-09-12 Ingo Renner  <ingo@typo3.org>

	* added a new group in the TS setup for access management
	* added a TS property to define a role Id that acts as "anonymous"
	* moved the default role Id that gets set for new friend relationships to the new access management category

2008-09-11 Ingo Renner  <ingo@typo3.org>

	* fixed bug: requested user could not be determined by the abstract community application controller in a mixed GET/POST request
	* made the edit relationship dialog save the changed relationships

2008-09-10 Ingo Renner  <ingo@typo3.org>

	* added a method to the user gateway to find connected users by their role
	* added a new column to the ACL roles table to mark roles as a friend role - that is a role that acts as a "friend list", that users can assign/categorize their friends to
	* added caching to the abstract community application controller for requesting and requested user