@@ -36,8 +36,6 @@ require_once($GLOBALS['PATH_community'] . 'view/privacy/class.tx_community_view_
  */
 class tx_community_controller_PrivacyApplication extends tx_community_controller_AbstractCommunityApplication {
 
-	protected $configuration;
-
 	/**
 	 * constructor for class tx_community_controller_PrivacyApplication
 	 */
