@@ -149,8 +149,16 @@ class tx_community_model_User implements tx_community_acl_AclResource, tx_commun
 		return $this->nickName;
 	}
 
+	public function getCombinedName() {
+		return $this->getFirstName() . ' ' . $this->getLastName();
+	}
+
 	public function getFirstName() {
 		return $this->account->getFirstName();
+	}
+
+	public function getLastName() {
+		return $this->account->getLastName();
 	}
 
 	/**
