@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Insert title here</title>
+</head>
+<body>
+
+
+<!-- ###USER_LIST### begin -->
+<ul>
+
+	<!-- ###LOOP:USERS### begin -->
+	<!-- ###LOOP_CONTENT### -->
+	<li>
+		###USER.UID###: ###USER.COMBINED_NAME###
+
+	###LOOP:WIDGET:USER_PROFILE.PROFILE_ACTIONS|USER###
+	</li>
+	<!-- ###LOOP_CONTENT### -->
+	<!-- ###LOOP:USERS### end -->
+
+</ul>
+<!-- ###USER_LIST### end -->
+
+
+</body>
+</html>
