@@ -1,0 +1,74 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2008 Ingo Renner <ingo@typo3.org>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+require_once($GLOBALS['PATH_community'] . 'interfaces/interface.tx_community_view.php');
+require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_template.php');
+
+/**
+ * The user list default view
+ *
+ * @author	Ingo Renner <ingo@typo3.org>
+ * @package TYPO3
+ * @subpackage community
+ */
+class tx_community_view_userlist_Index implements tx_community_View {
+
+	protected $templateFile;
+	protected $languageKey;
+
+	protected $userModel = array();
+
+	public function setTemplateFile($templateFile) {
+		$this->templateFile = $templateFile;
+	}
+
+	public function setLanguageKey($languageKey) {
+		$this->languageKey = $languageKey;
+	}
+
+	public function setUserModel(array $userModel) {
+		$this->userModel = $userModel;
+	}
+
+	public function render() {
+		$templateClass = t3lib_div::makeInstanceClassName('tx_community_Template');
+		$template = new $templateClass(
+			t3lib_div::makeInstance('tslib_cObj'),
+			$this->templateFile,
+			'user_list'
+		);
+		/* @var $template tx_community_Template */
+
+		$template->addLoop('users', 'user', $this->userModel);
+
+		return $template->render() . ', user list index view';
+	}
+}
+
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/community/view/userlist/class.tx_community_view_userlist_index.php'])	{
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/community/view/userlist/class.tx_community_view_userlist_index.php']);
+}
+
+?>
